@@ -1,3 +1,5 @@
+* Prepare byClass(), byId(), byName(), and byTag() to work with the `notHTML` private flag. [jddalton]
+
 * Reduce the number of times String#toUpperCase is used in compilers and switch to `++i` in byName() and byId(). [Diego Perini, jddalton]
 
 * Fix regression in `BUGGY_GEBTN` feature test. [jddalton]
